fix: set overflow: hidden on ListEntries__entry

--- a/packages/pelagos/src/listInput/ListEntries.less
+++ b/packages/pelagos/src/listInput/ListEntries.less
@@ -64,6 +64,7 @@
 			flex: 1;
 			flex-direction: row;
 			align-items: center;
+			overflow: hidden;
 		}
 
 		&__grip {
